@@ -3481,7 +3481,6 @@ src/libged/dump.c svneol=native#text/plain
 src/libged/dup.c svneol=native#text/plain
 src/libged/eac.c svneol=native#text/plain
 src/libged/edcodes.c svneol=native#text/plain
-src/libged/edcolor.c svneol=native#text/plain
 src/libged/edcomb.c svneol=native#text/plain
 src/libged/editit.c svneol=native#text/plain
 src/libged/edmater.c svneol=native#text/plain
